ready for paper submission